--- a/contato.html
+++ b/contato.html
@@ -18,7 +18,7 @@
 
   <main>
     <h1>Somos a Florestal Calcadao PG, Entre em contato conosco por meio deste cadastro</h1>
-    <form class="contato-form" action="https://script.google.com/macros/s/AKfycbzVWGUKY51nXtNiXEeAt5aDs0pNMOtokqbXnxknV2CXWDvLMsy5HGfvfCNvvroiK6FG8Q/exec" method="POST">
+    <form class="contato-form" action="https://script.google.com/macros/s/AKfycbyiXe6lwu0J-mIozRb667mAXh9Wrxe9hu7wYOp5wEk25YcVo_Y20uK0gLkqqDkoOgqPZw/exec">
 
       <label>Seu sexo:</label>
 <input type="radio" id="masc" name="sexo" value="Masculino">
