--- a/filiais.html
+++ b/filiais.html
@@ -26,22 +26,22 @@
         <div class="filiais">
             <div class="filial">
                 <h2>Filial Curitiba</h2>
-                <p>Rua do Calcadao Cheia de Gente, 172 - Centro</p>
+                <p>Rua Shopping lotada, 172 - Centro</p>
             </div>
             <div class="filial">
                 <h2>Filial Ponta Grossa</h2>
-                <p>- Rua do Cafe com Chorume, 456 - Centro</p>
+                <p>- Rua das blusa, 456 - Centro</p>
             </div>
             <div class="filial">
                 <h2>Filial Telêmaco Borba</h2>
-                <p>Rua Paraná, 789 - Centro</p>
+                <p>Rua Alcino Freire, 789 - Centro</p>
             </div>
         </div>
     </main>
 
     <!-- Rodapé -->
     <footer>
-        <p>&copy; 2025 Florestal Calcadao PG-PR - Todos os direitos reservados</p>
+        <p>&copy; 2025 Moletons Drakes PG-PR - Todos os direitos reservados</p>
     </footer>
 
 </body>
