--- a/filiais.html
+++ b/filiais.html
@@ -12,7 +12,7 @@
 
     <!-- Cabeçalho -->
     <header>
-        <h2>Locadora IFPR</h2>
+        <h2>Moletom Duravel e Resistente a agua</h2>
         <nav>
             <a href="index.html">Início</a>
             <a href="filiais.html">Filiais</a>
