--- a/contato.html
+++ b/contato.html
@@ -19,7 +19,7 @@
 
   <main>
     <h1>Somos o Moletons Drakes, Entre em contato conosco por meio deste cadastro</h1>
-    <form class="contato-form" action="https://script.google.com/macros/s/AKfycby9o6W-dpQifS74JfwEcf6-5KC84NN8mNC2BNHitkdYQai6eK4jc4nHp6_Cb7HAa-DfsA/exec">
+    <form class="contato-form" action="https://script.google.com/macros/s/AKfycbzgmjzXv4CMhMpWD3v7_O_A1cJWdgL66jioTbucLXyGxAoWif6_xPB3aYc47dswKwRj4w/exec" method="POST">
 
       <label>Seu sexo:</label>
 <input type="radio" id="masc" name="sexo" value="Masculino">
