--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <!-- Conteúdo principal -->
 <main>
-  <h1>Bem-vindo à Locadora de Veículos</h1>
-  <p>Encontre o carro ideal para sua viagem, trabalho ou lazer.</p>
+  <h1>Bem-vindo à chuteiras PG</h1>
+  <p>chueiras PG.</p>
 
   <div id="conteudo" class="conteudo-scroll">
     <p>Carregando conteúdo...</p>
