--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!-- Conteúdo principal -->
 <main>
   <h1>Bem-vindo à chuteiras PG</h1>
-  <p>chueiras PG.</p>
+  <p>chuteiras PG.</p>
 
   <div id="conteudo" class="conteudo-scroll">
     <p>Carregando conteúdo...</p>
