Add theme toggle element to index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <a href="planilha.html">Planilha</a>
         <link rel="stylesheet" href="style.css">
     </nav>
+     <div id="tema-toggle" class="tema-toggle">
+    <div class="bolinha"></div>
+  </div>
 </header>
 
 <!-- Conteúdo principal -->
