Change header from 'Moletons Drakes PG' to 'Chuteiras PG'

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Cabeçalho -->
 <header>
-    <h2>Moletons Drakes PG</h2>
+    <h2>Chuteiras PG</h2>
     <nav>
         <a href="index.html">Inicio</a>
         <a href="filiais.html">Filiais</a>
